--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 /.idea/
+build/
+dist/
+.venv/
+nebx.egg-info/
